# a4i

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.py  deploy-cloudrun.sh  deploy-vertex-ai.sh  deploy.py  main.py  plan.md  pyproject.toml  runner.py  sqlite.db
agent/: __init__.py  main.py
agents/: __init__.py  base_agent.py  fema_agent.py  first_responder.py  search_agent.py
common/: big_query_data_agent.py  map_tool.py
disaster_discovery_agent/: agent.py  location_finder.py
disaster_discovery_agent/bq_agent/: __init__.py
disaster_discovery_agent/fema_agent/: __init__.py
disaster_discovery_agent/fema_live_agent/: agent.py
disaster_discovery_agent/noaa_agent/: __init__.py  agent.py
disaster_discovery_agent/noaa_live_agent/: agent.py
docs/: DEPLOYMENT.md  DEPLOYMENT_CLOUDRUN.md  DEPLOYMENT_VERTEX_AI.md
fema_agent/: agent.py
first_responder_agent/: agent.py  map_tool.py
first_responder_agent/common/: __init__.py  big_query_data_agent.py  bigquery_tools.py  geocoding.py  google_maps_mcp_agent.py  search_places_tool.py  state_tools.py
first_responder_agent/disaster_discovery_agent/: __init__.py  agent.py
first_responder_agent/disaster_discovery_agent/fema_live_agent/: agent.py
first_responder_agent/insights_agent/: agent.py
first_responder_agent/relief_finder_agent/: agent.py  hospital_finder_agent.py  hospital_finder_tool.py  shelter_finder_agent.py  shelter_finder_tool.py  supply_finder_agent.py  supply_finder_tool.py
insights_agent/: __init__.py  agent.py
relief_finder_agent/: __init__.py  agent.py  hospital_finder_agent.py  shelter_finder_agent.py  supply_finder_agent.py
storm_events_agent/: agent.py
ui/: .env.local.example  package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
ui/components/: AgentActivityIndicator.tsx  AgentProcessingPanel.tsx  CustomMessages.tsx  LeafletMap.tsx  Map.tsx  MapPanel.tsx
(+1 files in other folders)
